--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "always_music",
+  "name": "always_music2",
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
@@ -11,6 +11,7 @@
   "description": "",
   "dependencies": {
     "dotenv": "^16.4.5",
+    "express": "^4.19.2",
     "pg": "^8.11.5"
   }
 }
